# jira-tui

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/jira_tui/: __init__.py  __main__.py  app.py  app.tcss
tests/: test_app.py
